initial works on auth api

--- a/auth-service/.env
+++ b/auth-service/.env
@@ -5,3 +5,5 @@
 # Example uses local infra from backend-infra/docker-compose.yml
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
 PORT=3001
+JWT_SECRET=nv6FNtvAmBmUMHRSta8aSZNwiw4XAH
+
