--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -4,4 +4,6 @@
 # Postgres connection URL (shared DB instance)
 # Example uses local infra from backend-infra/docker-compose.yml
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
+PORT=3001
+JWT_SECRET=nv6FNtvAmBmUMHRSta8aSZNwiw4XAH
 
