--- a/backend-infra/.env
+++ b/backend-infra/.env
@@ -4,6 +4,5 @@
 # Postgres connection URL (shared DB instance)
 # Example uses local infra from backend-infra/docker-compose.yml
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
-PORT=3000
+SERVER_PORT=3000
 JWT_SECRET=nv6FNtvAmBmUMHRSta8aSZNwiw4XAH
-
