--- a/profile-service/.air.toml
+++ b/profile-service/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = ".air"
 [build]
   args_bin = []
   bin = "./.air/main"
-  cmd = "go build -o ./.air/main ."
+  cmd = "go build -o .air/main cmd/server/main.go"
   delay = 1000
   exclude_dir = ["assets", ".tmp", "vendor", "testdata"]
   exclude_file = []
