--- a/profile-service/Dockerfile
+++ b/profile-service/Dockerfile
@@ -1,15 +1,26 @@
-# Build stage
-FROM golang:1.22-alpine AS builder
-WORKDIR /src
-COPY go.mod ./
-RUN --mount=type=cache,target=/go/pkg/mod go mod download || true
+FROM golang:1.25.0-alpine AS builder
+
+ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
+
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN --mount=type=cache,target=/go/pkg/mod go mod download
+
 COPY . .
 RUN --mount=type=cache,target=/go/pkg/mod \
-    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/server ./cmd/server
+    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o /out/server ./cmd/server
 
-# Runtime stage
-FROM alpine:3.20
-WORKDIR /
+# Stage 2: Run
+FROM alpine:latest
+
+WORKDIR /app
 COPY --from=builder /out/server /server
-EXPOSE 3001
-ENTRYPOINT ["/server"]
+COPY ./docs ./docs
+
+RUN apk add --no-cache ca-certificates
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+USER appuser
+
+EXPOSE 3002
+CMD ["/server"]
